<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:checked="true" android:id="@+id/home_bottom_0" android:icon="@drawable/home_bottom_icon_0" android:title="@string/home_bottom_menu_0"/>
        <item android:checked="false" android:id="@+id/home_bottom_1" android:icon="@drawable/home_bottom_icon_1" android:title="@string/home_bottom_menu_1"/>
        <item android:checked="false" android:id="@+id/home_bottom_2" android:icon="@drawable/home_bottom_icon_2" android:title="@string/home_bottom_menu_2"/>
        <item android:checked="false" android:id="@+id/home_bottom_3" android:icon="@drawable/home_bottom_icon_3" android:title="@string/home_bottom_menu_3"/>
        <item android:checked="false" android:id="@+id/home_bottom_4" android:icon="@drawable/home_bottom_icon_4" android:title="@string/home_bottom_menu_4"/>
    </group>
</menu>