<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pages.Personal.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_height="25dp">
        <Button
            android:layout_width="25dp"
            android:gravity="center"
            android:background="@drawable/baseline_close_24"
            android:layout_height="25dp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/login_string_0"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="start|center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_height="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/login_string_1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/grey"
            android:text="@string/login_string_2"
            android:layout_height="20dp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:text="@string/login_string_3"
                android:layout_height="wrap_content"/>
            <View
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_width="14dp"
                android:background="@drawable/baseline_arrow_drop_down_24"
                android:layout_height="14dp"/>
            <View
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_width="0.8dp"
                android:background="@color/grey"
                android:layout_height="10dp"/>
            <EditText
                android:layout_marginStart="10dp"
                android:hint="@string/login_string_4"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_marginEnd="25dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/lavender"
            android:layout_height="0.1dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_height="220dp">

        <Button
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:text="@string/login_string_5"
            android:textColor="@color/white"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bt_send" />
        <Button
            android:layout_centerInParent="true"
            android:layout_below="@+id/bt_send"
            android:id="@+id/bt_switch"
            android:text="@string/login_string_6"
            android:background="@drawable/bt_switch"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@id/bt_switch"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="18dp"
                android:background="@drawable/bt_check"
                android:id="@+id/bt_check"
                android:gravity="center"
                android:layout_height="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login_string_7"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/login_string_8"
                android:textColor="#043ADC"
                android:textSize="12sp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/login_string_9"
                android:textColor="#043ADC"
                android:textSize="12sp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_height="match_parent">
        <Button
            android:layout_alignParentBottom="true"
            android:background="@drawable/wechat"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <Button
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/qq"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <Button
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:background="@drawable/weibo"
            android:layout_height="50dp"/>
    </RelativeLayout>
</LinearLayout>